# abstract_vuln_finder

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO
docs/: Doxyfile.in
include/: IR_manip.hh
include/Core/CFG/: CFG.hh  Env.hh  Func.hh  Graph.hh  TransformToCFG.hh  Var.hh
include/Core/Domains/: ConcreteDomain.hh  Domain.hh  INonRelational.hh  Intervals.hh  abstract_domain.hh
include/Core/Domains/Apron/: APIntervals.hh
include/Core/Iterator/: Iterator.hh  Iterator.hxx
include/Core/Memory/: ByteAbstraction.hh
src/: IR_manip.cc  IR_manip.hh  abstract_domain.hh  main.cc
src/Core/CFG/: CFG.cc  Func.cc  Graph.cc  TransformToCFG.cc
src/Core/Domains/: ConcreteDomain.cc  Intervals.cc  IntervalsInst.cc
src/Core/Domains/Apron/: APIntervals.cc
src/Core/Iterator/: Iterator.cc
src/Core/Memory/: ByteAbstraction.cc
tests/: CMakeLists.txt  CMakeLists.txt.in  test_ir_manip.cc
tests/Core/CFG/: test_cfg.cc  test_func.cc  test_graph.cc  test_transform_to_cfg.sh
tests/ll/: arc4.ll  boucle.ll  buf_no_vuln.ll  buf_vuln.ll  complex_numbers.ll  cpp_constructor.ll  exception_test.ll  hello_world.ll  pthread.ll  pthread_worker.ll  stringpool.ll  switch.ll
